Enable two plugins for date and committers

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -129,3 +129,11 @@ markdown_extensions:
         - name: mermaid
           class: mermaid
           format: !!python/name:pymdownx.superfences.fence_code_format
+
+plugins:
+  - git-revision-date-localized:
+      enable_creation_date: true
+      type: date
+  - git-committers:
+      repository: shakibamoshiri/courses
+      branch: gh-pages
