Update for module 4 routing

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -66,6 +66,7 @@ nav:
       - en/vps/singbox/advanced/m1.md
       - en/vps/singbox/advanced/m2.md
       - en/vps/singbox/advanced/m3.md
+      - en/vps/singbox/advanced/m4.md
   - Software:
     - en/software/index.md
     - en/software/ddd/overview.md
